--- a/app/src/main/res/navigation/navigation_basic_user.xml
+++ b/app/src/main/res/navigation/navigation_basic_user.xml
@@ -63,7 +63,7 @@
     <!-- TEAM PROFILE PAGE -->
     <fragment
         android:id="@+id/navigation_team_profile"
-        android:name="io.usys.report.ui.ysr.team.TeamProfileFragment"
+        android:name="io.usys.report.ui.ysr.team.TeamProfileFragmentVG"
         android:label="@string/title_team"
         tools:layout="@layout/profile_team" >
     </fragment>
