--- a/app/src/main/res/layout/fragment_home_tryouts_frame.xml
+++ b/app/src/main/res/layout/fragment_home_tryouts_frame.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/soccer_field"
-    tools:context=".ui.ysr.MasterUserActivity">
+    tools:context=".ui.ludi.MasterUserActivity">
 
     <ImageView
         android:id="@+id/testDragImageView"
